# ai-daily-tasks

./: .gitignore  README.md
RAG-with-5-models/: LICENSE  README.md
RAG-with-5-models/ConvoRAG/: pyproject.toml
RAG-with-5-models/CosineExplorer/: pyproject.toml
RAG-with-5-models/RAGStream/: GrandPalaceHotelDocument.txt  RAGStream.py  pyproject.toml
RAG-with-5-models/SemanticSeek/: SemanticSeek.py  pyproject.toml
RAG-with-5-models/SimpleRAG/: pyproject.toml
RAGStream/: RAGStream.py
day1-rag-architecture/: README.md
day1-rag-architecture/kaggle-setup/: notebook4b959448f2.ipynb
