[tool.poetry]
name = "convorag"
version = "0.1.0"
description = "Conversational RAG allows users to engage in dynamic conversations, leveraging Retrieval-Augmented Generation for context-aware, adaptive, and coherent dialogues."
authors = ["Gurucharan MK"]
license = "{ file = \"LICENSE\" }"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.2"
ollama = "^0.4.7"
streamlit = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
