[tool.poetry]
name = "simplerag"
version = "0.1.0"
description = "SimpleRAG introduces users to the fundamentals of Retrieval-Augmented Generation (RAG), combining information retrieval with language generation for improved response accuracy."
authors = ["Gurucharan MK"]
license = "{ file = \"LICENSE\" }"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.4.7"
numpy = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
